2009-02-05   Roland Giersig  <rgiersig@cpan.org>

	* v1.08

	* Makefile.PL, Tty.xs: added support for posix_openpt(), thanks to Ed Schouten for providing a patch

2006-07-18   Roland Giersig  <rgiersig@cpan.org>

	* v1.07

	* Tty.xs: added some more letter to BSD allocation

2006-07-15   Roland Giersig  <rgiersig@cpan.org>

	* v1.06

	* Tty.pm: pre-allocate buffer for ioctl

2006-06-06   Roland Giersig  <rgiersig@cpan.org>

	* v1.05

	* Tty.xs: added includes <sys/pty.h>  and <sys/ptyio.h>

2006-05-28   Roland Giersig  <rgiersig@cpan.org>

	* v1.04

	* Tty.xs: added handling for z/OS (uses /dev/ptyp0000)

	* Makefile.PL: added <sys/pty.h> (for HPUX)

2006-04-25   Roland Giersig  <rgiersig@cpan.org>

	* v1.03

	* Tty.c: changed newCONSTSUB to use newSV(0) instead of PL_sv_undef, now undef'd constants work

	* Makefile.PL: made ccflags handling meta-char safe, added ldflags; enhanced error msg

	* Makefile.PL: added <sys/ptyio.h>

2002-04-02   Roland Giersig  <rgiersig@cpan.org>

	* Tty.pm, Pty.pm: v1.02; disable warning for non-existant die handler

2002-03-18   Roland Giersig  <rgiersig@cpan.org>

	* v1.01
	
	* Makefile.PL: remove cpp, test-compile instead

	* Tty.pm, Pty.pm: disable die handler when requiring Stty

2002-03-06  Roland Giersig  <rgiersig@cpan.org>

	* v0.97_04, final pre-release version

2002-03-04  Roland Giersig  <rgiersig@cpan.org>

	* Pty.pm: v0.97_03

	* Makefile.PL: order of include files is preserved; added test for
	working cpp.

	* Tty.pm (clone_winsize_from): v0.97_03; added function.

	* Tty.xs (allocate_pty): fixed typo in close for _getpty; changed
	order of termios.h and termio.h includes

2002-02-26   Roland Giersig  <rgiersig@cpan.org>

	* test.pl: replaced Test.pm

	* Tty.pm (set_raw): v0.97_01; moved set_raw() from test to method

	* Tty.xs: got rid of snprintf; don't try openpty() and getpt() if
	ptsname is not there.

	* Pty.pm: v0.97_01; updated docs 

	* Makefile.PL: v0.97_01; auto-create IO::Tty::Constant
