@@ -1,3 +1,6 @@
+2010-09-10   Todd Rinaldo <toddr@cpan.org>
+	* RT 45008 - only try TIOCSCTTY if we don't have a ctty
+	
 2009-02-05   Roland Giersig  <rgiersig@cpan.org>
 
 	* v1.08
